--- a/management-report/markdown/management-report.Rmd
+++ b/management-report/markdown/management-report.Rmd
@@ -73,7 +73,7 @@ pds_hb %<>% rename(geog = ijb)
 pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
 
 # combine data for ijb, hb and Scotland
-pds_all <- bind_rows(pds_scot, pds_hb, pds_ijb)
+pds_all <- bind_rows(pds_scot, pds_ijb, pds_hb)
 
 pds_all$geog<- factor(pds_all$geog, levels = unique(pds_all$geog))
 
@@ -715,7 +715,7 @@ function filter_default() {
 
 // pathways
 
- document.getElementById("met_filter_year").getElementsByClassName("selectized") 
+   document.getElementById("met_filter_year").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
 
   document.getElementById("met_filter_year").getElementsByClassName("selectized")
@@ -749,6 +749,18 @@ function filter_default() {
   [0].selectize.setValue("2023/24", false);
 
   document.getElementById("wait_filter_hb_year").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("filter_median").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_median").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("filter_median_hb").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_median_hb").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
   document.getElementById("trend_filter_wait").getElementsByClassName("selectized") 
@@ -797,16 +809,40 @@ function filter_default() {
   
 // demographics
 
-    document.getElementById("trend_filter_age_prop_hb").getElementsByClassName("selectized") 
+   document.getElementById("filter_age_prop_hb").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
 
-  document.getElementById("trend_filter_age_prop_hb").getElementsByClassName("selectized")
+  document.getElementById("filter_age_prop_hb").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
-   document.getElementById("trend_filter_age_prop_ijb").getElementsByClassName("selectized") 
+  document.getElementById("filter_age_prop_ijb").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
 
-  document.getElementById("trend_filter_age_prop_ijb").getElementsByClassName("selectized")
+  document.getElementById("filter_age_prop_ijb").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("filter_ijb_age_pop").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_ijb_age_pop").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("filter_ijb_age_pop_group").getElementsByClassName("selectized") 
+  [0].selectize.setValue("65+", false);
+
+  document.getElementById("filter_ijb_age_pop_group").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("filter_hb_age_pop").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_hb_age_pop").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("filter_hb_age_pop_group").getElementsByClassName("selectized") 
+  [0].selectize.setValue("65+", false);
+
+  document.getElementById("filter_hb_age_pop_group").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
   document.getElementById("filter_trend_age_2_pop").getElementsByClassName("selectized") 
@@ -821,13 +857,25 @@ function filter_default() {
   document.getElementById("filter_pop_age_year").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
-   document.getElementById("filter_pop_age_hb_ijb").getElementsByClassName("selectized") 
-  [0].selectize.setValue("NHS Ayrshire & Arran", false);
+  document.getElementById("filter_pop_age_hb_ijb").getElementsByClassName("selectized") 
+  [0].selectize.setValue("Aberdeen City", false);
 
   document.getElementById("filter_pop_age_hb_ijb").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
-   document.getElementById("filter_ldp_age_2").getElementsByClassName("selectized") 
+  document.getElementById("filter_ijb_age_ldp").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_ijb_age_ldp").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+    
+  document.getElementById("filter_hb_age_ldp").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_hb_age_ldp").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+  document.getElementById("filter_ldp_age_2").getElementsByClassName("selectized") 
   [0].selectize.setValue("Scotland", false);
 
   document.getElementById("filter_ldp_age_2").getElementsByClassName("selectized")
@@ -857,10 +905,22 @@ function filter_default() {
   document.getElementById("filter_hb_sex_pop").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
-    document.getElementById("filter_ijb_sex_pop").getElementsByClassName("selectized") 
+  document.getElementById("filter_ijb_sex_pop").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
 
   document.getElementById("filter_ijb_sex_pop").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
+   document.getElementById("filter_ijb_sex_ldp").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_ijb_sex_ldp").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+    
+  document.getElementById("filter_hb_sex_ldp").getElementsByClassName("selectized") 
+  [0].selectize.setValue("2023/24", false);
+
+  document.getElementById("filter_hb_sex_ldp").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
   document.getElementById("filter_ldp_sex").getElementsByClassName("selectized") 
@@ -893,13 +953,19 @@ function filter_default() {
   document.getElementById("filter_hb_simd_pop").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
+  document.getElementById("filter_hb_simd_pop_quintile").getElementsByClassName("selectized") 
+  [0].selectize.setValue("All", false);
+
+  document.getElementById("filter_hb_simd_pop_quintile").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
   document.getElementById("filter_ijb_simd_pop").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
 
   document.getElementById("filter_ijb_simd_pop").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
-    document.getElementById("filter_ijb_simd_pop_quintile").getElementsByClassName("selectized") 
+  document.getElementById("filter_ijb_simd_pop_quintile").getElementsByClassName("selectized") 
   [0].selectize.setValue("All", false);
 
   document.getElementById("filter_ijb_simd_pop_quintile").getElementsByClassName("selectized")
@@ -917,7 +983,7 @@ function filter_default() {
   document.getElementById("filter_hb_simd_ldp").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
-    document.getElementById("filter_hb_simd_ldp_quintile").getElementsByClassName("selectized") 
+  document.getElementById("filter_hb_simd_ldp_quintile").getElementsByClassName("selectized") 
   [0].selectize.setValue("All", false);
 
   document.getElementById("filter_hb_simd_ldp_quintile").getElementsByClassName("selectized")
@@ -929,11 +995,18 @@ function filter_default() {
   document.getElementById("filter_ijb_simd_ldp").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
   
+  document.getElementById("filter_ijb_simd_ldp_quintile").getElementsByClassName("selectized") 
+  [0].selectize.setValue("All", false);
+
+  document.getElementById("filter_ijb_simd_ldp_quintile").getElementsByClassName("selectized")
+  [0].selectize.removeOption("");
+  
    document.getElementById("filter_ldp_simd_bar").getElementsByClassName("selectized") 
   [0].selectize.setValue("Scotland", false);
 
   document.getElementById("filter_ldp_simd_bar").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
+  
   
   
   
