--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -71,7 +71,7 @@ pds_hb %<>% rename(geog = ijb)
 pds_hb$geog<- factor(pds_hb$geog, levels = unique(pds_hb$geog))
 
 # combine data for ijb, hb and Scotland
-pds_all <- bind_rows(pds_scot, pds_hb, pds_ijb)
+pds_all <- bind_rows(pds_scot, pds_ijb, pds_hb)
 
 pds_all$geog<- factor(pds_all$geog, levels = unique(pds_all$geog))
 
@@ -757,7 +757,7 @@ pds_pop_age_2_data <- SharedData$new(pds_age_rates_2_data,
   key = ~geog, group = "trend_age_2_pop")
 
 data_filter_trend_age_2_pop <- filter_select(id = "filter_trend_age_2_pop",
-                                    label = "Select Health Board or Integration Authority Area:",
+                                    label = "Select Integration Authority Area or Health Board:",
                                     group = ~geog,
                                     sharedData = pds_pop_age_2_data,
                                     multiple = FALSE
@@ -836,7 +836,7 @@ data_filter_pop_year <- filter_select(id = "filter_pop_age_year",
 
 
 data_filter_pop_hb_ijb <- filter_select(id = "filter_pop_age_hb_ijb",
-                                    label = "Select Health Board/Integration Authority Area:",
+                                    label = "Select Integration Authority Area or Health Board:",
                                     group = ~geog,
                                     sharedData = pds_age_pop_data,
                                     multiple = FALSE
@@ -1129,7 +1129,7 @@ DT::datatable(hb_age_table_ldp, rownames = FALSE, extensions = "FixedColumns",
 ldp_all_age_2_data <- SharedData$new(ldp_all_age_2, key = ~geog, group = "ldp_age_2")
 
 data_filter_ldp_age_2 <- filter_select(id = "filter_ldp_age_2",
-                                    label = "Select Health Board or Integration Authority Area:",
+                                    label = "Select Integration Authority Area or Health Board:",
                                     group = ~geog,
                                     sharedData = ldp_all_age_2_data,
                                     multiple = FALSE
@@ -1597,7 +1597,7 @@ pds_pop_sex_data <- SharedData$new(pds_all_sex_rates,
   key = ~geog, group = "trend_sex_pop")
 
 data_filter_trend_sex_pop <- filter_select(id = "filter_trend_sex_pop",
-                                    label = "Select Health Board or Integration Authority Area:",
+                                    label = "Select Integration Authority Area or Health Board:",
                                     group = ~geog,
                                     sharedData = pds_pop_sex_data,
                                     multiple = FALSE
@@ -1883,7 +1883,7 @@ DT::datatable(hb_sex_table_ldp, rownames = FALSE, extensions = "FixedColumns",
 ldp_all_sex_data <- SharedData$new(ldp_all_sex, key = ~geog, group = "ldp_sex")
 
 data_filter_ldp_sex <- filter_select(id = "filter_ldp_sex",
-                                    label = "Select Health Board or Integration Authority Area:",
+                                    label = "Select Integration Authority Area or Health Board:",
                                     group = ~geog,
                                     sharedData = ldp_all_sex_data,
                                     multiple = FALSE
@@ -2456,7 +2456,7 @@ pds_pop_simd_data <- SharedData$new(pds_all_simd_rates,
   key = ~geog, group = "trend_simd_pop")
 
 data_filter_trend_simd_pop <- filter_select(id = "filter_trend_simd_pop",
-                                    label = "Select Health Board or Integration Authority Area:",
+                                    label = "Select Integration Authority Area or Health Board:",
                                     group = ~geog,
                                     sharedData = pds_pop_simd_data,
                                     multiple = FALSE
@@ -2861,7 +2861,7 @@ DT::datatable(hb_simd_table_ldp, rownames = FALSE, extensions = "FixedColumns",
 ldp_all_simd_data <- SharedData$new(ldp_all_simd, key = ~geog, group = "ldp_simd")
 
 data_filter_ldp_simd <- filter_select(id = "filter_ldp_simd",
-                                    label = "Select Health Board or Integration Authority Area:",
+                                    label = "Select Integration Authority Area or Health Board:",
                                     group = ~geog,
                                     sharedData = ldp_all_simd_data,
                                     multiple = FALSE
@@ -2950,7 +2950,7 @@ DT::datatable(ldp_simd_table, rownames = FALSE,
 ldp_all_simd_data_2 <- SharedData$new(ldp_all_simd, key = ~geog, group = "ldp_simd_2")
 
 data_filter_ldp_simd_bar <- filter_select(id = "filter_ldp_simd_bar",
-                                    label = "Select Health Board or Integration Authority Area:",
+                                    label = "Select Integration Authority Area or Health Board:",
                                     group = ~geog,
                                     sharedData = ldp_all_simd_data_2,
                                     multiple = FALSE
@@ -3067,7 +3067,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_pop_age_hb_ijb").getElementsByClassName("selectized") 
-  [0].selectize.setValue("NHS Ayrshire & Arran", false);
+  [0].selectize.setValue("Aberdeen City", false);
 
   document.getElementById("filter_pop_age_hb_ijb").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
